--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -1,2 +1,10 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>testPackage.TestClass.verifyMyAccountPageIsOpened</td></tr>
+<tr><td>testPackage.TestClass.enterTextInEmailAndPasswordTextBoxHomePage</td></tr>
+<tr><td>testPackage.TestClass.selectSortDropDownMyAccountPage</td></tr>
+<tr><td>testPackage.TestClass.clickOnSignInLink</td></tr>
+<tr><td>testPackage.TestClass.enterTextInSearchBoxMyAcconutPage</td></tr>
+<tr><td>testPackage.TestClass.verifySignInTabOpenedOnHomePage</td></tr>
+<tr><td>testPackage.TestClass.moveAndClickOnWomenTabOnMyAccountPage</td></tr>
+<tr><td>testPackage.TestClass.selectCategoriesCheckBoxOfCatalogOnWomenTabOnMyAccount</td></tr>
 </table>
