--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -15,6 +15,10 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>enterTextInEmailAndPasswordTextBoxHomePage</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>verifyMyAccountPageIsOpened</td>
 <td>&nbsp;</td></tr>
 <tr>
@@ -23,7 +27,7 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>enterTextInEmailAndPasswordTextBoxHomePage</td>
+<td>selectSortDropDownMyAccountPage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -32,6 +36,10 @@
 <tr>
 <td>&nbsp;</td>
 <td>openApplication</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>enterTextInSearchBoxMyAcconutPage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -57,4 +65,8 @@
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>tearDown</td>
+<td>&nbsp;</td></tr>
 </table>
