--- a/test-output/old/Suite/reporter-output.html
+++ b/test-output/old/Suite/reporter-output.html
@@ -1,6 +1,1 @@
-<h2>Reporter output</h2><table><tr><td>Element is displayed on screen!</td></tr>
-<tr><td>Element is displayed on screen!</td></tr>
-<tr><td>Element is displayed on screen!</td></tr>
-<tr><td>Element is displayed on screen!</td></tr>
-<tr><td>Element is not found!</td></tr>
-</table>
+<h2>Reporter output</h2><table></table>
